--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             color: goldenrod;
             font-size: 1.6em; /* Adjust the size as needed */
         }
+        body{
+            background-color: rgb(20,20,20);
+        }
     </style>
   </head>
   <body>
@@ -49,6 +52,54 @@
         </ul>
       </nav>
 
+      <section style="padding-bottom: 20px;">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+              <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://wallpaperset.com/w/full/5/7/0/206663.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Naruto</h5>
+                  <p>Adventure of Genin Shinobi of Hidden Leaf village, and his life</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://rare-gallery.com/mocahbig/393059-bleach-2021-manga-ichigo-4k-pc-wallpaper.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block" >
+                  <h5 style="color:blueviolet;">Bleach</h5>
+                  <p>Incredible story of Ichigo Kurosaki, simple human in the world of Shinigami</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://cdn.wallpapersafari.com/5/27/ayiZDI.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block" style="color:white;">
+                  <h5>Bluelock</h5>
+                  <p>The way of egoist Isagi Yoichi to the victory in football world</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://images2.alphacoders.com/131/1319760.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block" style="color:gold;">
+                  <h5 >Black Clover</h5>
+                  <p>Hard life of non-magic Asta in the world of Magic</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+      </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
