--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               <a class="nav-link" href="#">Home page<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#aboutUs" onclick="scrollToSection('#aboutUs')">About Us</a>
+              <a class="nav-link" href="#aboutUs">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacts</a>
+              <a class="nav-link" href="#contacts_footer">Contacts</a>
             </li>
           </ul>
         </div>
@@ -315,7 +315,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
-  <footer class="bg-dark text-white py-4">
+  <footer class="bg-dark text-white py-4" id="contacts_footer">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
