--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <html lang="en">
   <head>
     <title>AniMasters</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <style>
-        /* Style for "Ani" part */
+       
         .ani {
             color: red;
-            font-size: 1.6em; /* Adjust the size as needed */
+            font-size: 1.6em; 
         }
 
-        /* Style for "Masters" part */
+       
         .masters {
             color: goldenrod;
-            font-size: 1.6em; /* Adjust the size as needed */
+            font-size: 1.6em; 
         }
         body{
             background-color: rgb(20,20,20);
@@ -44,7 +41,7 @@
             </li>
           </ul>
         </div>
-        <!-- Add the Login button on the right -->
+        <!-- Login button on the right -->
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" href="#">Login</a>
@@ -145,7 +142,6 @@
               <a href="#" class="list-group-item list-group-item-action">Naruto</a>
               <a href="#" class="list-group-item list-group-item-action">Jujutsu Kaisen</a>
               <a href="#" class="list-group-item list-group-item-action">Attack on titan</a>
-              <!-- Add more anime titles here -->
             </div>
           </div>
           <div class="col-md-8">
@@ -230,7 +226,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h2 style="color:goldenrod;">Related Anime</h2>
+                <h2 style="color:goldenrod;">Watch Anime:</h2>
                 <ul class="list-group">
                     <li class="list-group-item"><a href="#" onclick="playVideo('https://r80106.kujo-jotaro.com/naruto/2/415.1080.cc15baa7f9c8d969.mp4?hash1=c3b22a33f42cb76b2950fd1b77155724&hash2=45bc283bf945896c176a83edebf56780')">Naruto</a></li>
                     <li class="list-group-item"><a href="#" onclick="playVideo('https://r80106.kujo-jotaro.com/bleach/1.1080.f61ed06faffab658.mp4?hash1=46c009115e9eae8aced3851683680afc&hash2=e86e3118f00574c2a553d65427d74060')">Bleach</a></li>
