--- a/register.html
+++ b/register.html
@@ -4,34 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Cartoon</title>
+  <title>Register Cartoon</title>
   <link rel="stylesheet" href="css/register.css">
   <link rel="icon" href="/assets/akatsuki.png" type="image/x-icon">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body>a
+<body>
 
 <div class="wrapper">
-  <from class="action">
-    <h1>Login</h1>
+  <form class="action">
+    <h1>Register</h1>
     <div class="input-box">
       <input type="text" placeholder="Username" required> <i class='bx bxs-user'></i>
     </div>
     <div class="input-box">
-      <input type="password" placeholder="Password" required> <i class='bx bxs-lock-alt' ></i>
+      <input type="password" placeholder="Password" required> <i class='bx bxs-lock-alt'></i>
+    </div>
+    <div class="input-box">
+      <input type="password" placeholder="Confirm Password" required> <i class='bx bxs-lock-alt'></i>
     </div>
 
-    <div class="remember-forgot">
-      <label><input type="checkbox"> Remember me</label>
-      <a href="#">Forgot password</a>
-    </div>
+    <button class="btn" type="submit">Register</button>
 
-    <button class="btn" type="submit">Login</button>
-
-    <div class="register-link">
-      <p>Don't have an account? <a href="#"> Register</a></p>
+    <div class="login-link">
+      <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
-  </from>
+  </form>
 </div>
 
 </body>
