--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
               </div>
               <div class="modal-body">
                   <!-- Character Image -->
-                  <img src="https://static.wikia.nocookie.net/p__/images/2/2f/YujiItadoriFullBodyManga.png/revision/latest?cb=20210613111953&path-prefix=protagonist" alt="Itadori Yuiji" class="img-fluid">
+                  <img src="https://upload.wikimedia.org/wikipedia/en/2/27/Yuji_Itadori.png" alt="Itadori Yuiji" class="img-fluid">
                   <!-- Character Description -->
                   <p>Itadori Yuiji is the main character of the anime Jujutsu Kaisen. He becomes involved in a world of curses and sorcery.</p>
               </div>
