--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="icon" href="/assets/akatsuki.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
@@ -646,7 +647,7 @@
               </div>
               <div class="modal-body">
                   <!-- Character Image -->
-                  <img src="https://upload.wikimedia.org/wikipedia/en/2/27/Yuji_Itadori.png" alt="Itadori Yuiji" class="img-fluid">
+                  <img src="https://m.media-amazon.com/images/I/51dr9jEHQTL._AC_UF894,1000_QL80_.jpg" alt="Itadori Yuiji" class="img-fluid">
                   <!-- Character Description -->
                   <p>Itadori Yuiji is the main character of the anime Jujutsu Kaisen. He becomes involved in a world of curses and sorcery.</p>
               </div>
