--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
   <form class="action">
     <h1>Register</h1>
     <div class="input-box">
-      <input type="text" placeholder="Username" required> <i class='bx bxs-user'></i>
+      <input type="text" placeholder="Login" required> <i class='bx bxs-user'></i>
     </div>
     <div class="input-box">
       <input type="password" placeholder="Password" required> <i class='bx bxs-lock-alt'></i>
