--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"
 />
+<link rel="icon" type="image/png" href="assets/akatsuki.png">
 <section class="vh-100" style="background-color: rgb(45, 45, 45)">
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
