--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register Cartoon</title>
   <link rel="stylesheet" href="css/register.css">
-  <link rel="icon" href="/assets/akatsuki.png" type="image/x-icon">
+  <link rel="icon" href="assets/akatsuki.png" type="image/x-icon">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -15,7 +15,7 @@
   <form class="action">
     <h1>Register</h1>
     <div class="input-box">
-      <input type="text" placeholder="Username" required> <i class='bx bxs-user'></i>
+      <input type="text" placeholder="Email" required> <i class='bx bxs-user'></i>
     </div>
     <div class="input-box">
       <input type="password" placeholder="Password" required> <i class='bx bxs-lock-alt'></i>
