--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
+            href="https://unpkg.com/tippy.js@6.3.1/dist/tippy.css"
     />
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/x-icon" href="assets/akatsuki.png">
@@ -586,17 +587,25 @@
             if (nameInput.value === '') {
                 alert('The "Fullname" field must be filled in');
                 return false;
+            } else {
+                document.getElementById('name-error').textContent = '';
             }
 
             if (emailInput.value === '') {
                 alert('The "Email" field must be filled in');
                 return false;
+            } else {
+                document.getElementById('email-error').textContent = '';
             }
+
 
             if (messageInput.value === '') {
                 alert('The "Message" field must be filled in');
                 return false;
+            }else {
+                document.getElementById('message-error').textContent = '';
             }
+
 
             return true;
         }
@@ -814,7 +823,6 @@
     </div>
 </section>
 
-
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <section id="aboutUs" class="bg-gray py-5 text-white" style="margin-top: 50px;">
@@ -936,7 +944,74 @@
     });
 </script>
 
+<section>
+    <div class="feedback">
+        <h1>Examples of feedback mechanisms</h1>
 
+        <!-- Popup example -->
+        <button class="feedback-button" id="popupButton">Show a localhost</button>
+
+        <!-- Example of a form with validation -->
+        <form id="myForm" class="feedback-form">
+            <label for="emailInput">Email:</label>
+            <input type="email" id="emailInput" required>
+            <button type="submit" class="feedback-button">Send</button>
+        </form>
+
+        <!-- Example of an element with a tooltip -->
+        <a href="help.html" class="feedback-button">HELP</a>
+
+
+        <!-- Example notification -->
+        <button class="feedback-button" id="notificationButton">Notifications</button>
+    </div>
+
+    <script>
+        document.getElementById("popupButton").addEventListener("click", showPopup);
+
+        function showPopup() {
+            alert("Your localhost number is 63342.");
+        }
+
+        document.getElementById("myForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            if (validateForm()) {
+                alert("The form was submitted successfully.");
+            }
+        });
+
+        function validateForm() {
+            const emailInput = document.getElementById("emailInput");
+            if (!emailInput.checkValidity()) {
+                alert("Please enter a valid email address.");
+                return false;
+            }
+            return true;
+        }
+
+        tippy("#myElement", {
+            content: "This is the button to submit data",
+            placement: "top",
+        });
+
+        document.getElementById("notificationButton").addEventListener("click", function() {
+            showNotification("This is an important notice!");
+        });
+
+        function showNotification(message) {
+            const notification = document.createElement("div");
+            notification.className = "notification";
+            notification.textContent = message;
+            document.body.appendChild(notification);
+
+            setTimeout(() => {
+                notification.remove();
+            }, 5000);
+        }
+    </script>
+
+    <script src="https://unpkg.com/tippy.js@6.3.1/dist/tippy.all.min.js"></script>
+</section>
 
 </body>
 <footer class="bg-dark text-white py-4" id="contacts_footer">
