--- a/index.html
+++ b/index.html
@@ -496,35 +496,33 @@
             <li class="list-group-item">
               <a
                 href="#"
-                onclick="playVideo('https://r80106.kujo-jotaro.com/naruto/2/415.1080.cc15baa7f9c8d969.mp4?hash1=c3b22a33f42cb76b2950fd1b77155724&hash2=45bc283bf945896c176a83edebf56780')"
-                >Naruto</a
-              >
+                onclick="playVideo('assets/Naruto.mp4')">Naruto</a>
             </li>
             <li class="list-group-item">
               <a
                 href="#"
-                onclick="playVideo('https://r80106.kujo-jotaro.com/bleach/1.1080.f61ed06faffab658.mp4?hash1=46c009115e9eae8aced3851683680afc&hash2=e86e3118f00574c2a553d65427d74060')"
+                onclick="playVideo('assets/Bleach.mp4')"
                 >Bleach</a
               >
             </li>
             <li class="list-group-item">
               <a
                 href="#"
-                onclick="playVideo('https://r80106.kujo-jotaro.com/blue-lock/1.1080.ef77e515ce6f56ae.mp4?hash1=7b9d58fbff9b47763a100fbb2a4e1cc1&hash2=82af3a594b19420d49e91ea2c3447532')"
+                onclick="playVideo('assets/Bluelock.mp4')"
                 >Bluelock</a
               >
             </li>
             <li class="list-group-item">
               <a
                 href="#"
-                onclick="playVideo('https://r80106.kujo-jotaro.com/black-clover/1.1080.792beefdf28e3580.mp4?hash1=d7d737182e62436daafcd0145c0027b7&hash2=37be419d988353d9f27009c1edd11a89')"
+                onclick="playVideo('assets/Blackc.mp4')"
                 >Black Clover</a
               >
             </li>
             <li class="list-group-item">
               <a
                 href="#"
-                onclick="playVideo('https://r80106.kujo-jotaro.com/jujutsu-kaisen/1.1080.812841b2c0546248.mp4?hash1=2249a0f7f0266419372929c3a6bf21ef&hash2=46e6c7d4e86cb39d4a73022e2c2d14dc')"
+                onclick="playVideo('assets/Jjk.mp4')"
                 >Jujustsu Kaisen</a
               >
             </li>
