--- a/register.html
+++ b/register.html
@@ -46,46 +46,21 @@
     <button type="submit">Register</button>
   </form>
   <div class="social-buttons">
-    <button class="google-button">Register via Google</button>
-    <button class="facebook-button">Register via Facebook</button>
+    <button class="google-button">
+      <img src="assets/google.png" alt="Google icon" class="button-icon">
+      Register via Google
+    </button>
+    <p></p>
+    <button class="facebook-button">
+      <img src="assets/facebook.png" alt="Facebook icon" class="button-icon">
+      Register via Facebook
+    </button>
+    <p></p>
   </div>
   <div class="login-link">
-    <label for="log">You already have an account:</label>
-    <a href="login.html" id="log">Login</a>
+    <label for="log">Already have an account?</label><a href="login.html" id="log">Login</a>
   </div>
 
-
-</div>
-=======
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Register Cartoon</title>
-<link rel="stylesheet" href="css/register.css">
-<link rel="icon" href="assets/akatsuki.png" type="image/x-icon">
-<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</body>
-<body>
-
-<div class="wrapper">
-  <form class="action">
-    <h1>Register</h1>
-    <div class="input-box">
-      <input type="text" placeholder="Email" required> <i class='bx bxs-user'></i>
-    </div>
-    <div class="input-box">
-      <input type="password" placeholder="Password" required> <i class='bx bxs-lock-alt'></i>
-    </div>
-    <div class="input-box">
-      <input type="password" placeholder="Confirm Password" required> <i class='bx bxs-lock-alt'></i>
-    </div>
-
-    <button class="btn" type="submit">Register</button>
-
-    <div class="login-link">
-      <p>Already have an account? <a href="login.html">Login</a></p>
-    </div>
-  </form>
 </div>
 
 </body>
