--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/register.css">
   <title>Registration</title>
-  <link rel="icon" type="image/x-icon" href="icons8-sasuke-uchiha-color-70.png">
+  <link rel="icon" type="image/x-icon" href="assets/akatsuki.png">
 
 </head>
 <body>
