--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
         }
 
         .comment-list {
-            max-height: 200px;
-            overflow-y: auto;
-        }
+              max-height: 200px;
+              overflow-y: auto;
+              border: 2px solid white;
+              box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+          }
 
     </style>
   </head>
