--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             <li class="list-group-item">
               <a
                 href="#"
-                onclick="playVideo('assets/Naruto.mp4')">Naruto</a>
+                onclick="playVideo('https://r400102.kujo-jotaro.com/naruto/2/500.720.d22dc5f02e426ab9.mp4?hash1=8bc8b98dc49d7c7874a69e04dad5e8ea&hash2=da1b8ccf7d9eca790c06866908c39987')">Naruto</a>
             </li>
             <li class="list-group-item">
               <a
