--- a/help.html
+++ b/help.html
@@ -2,7 +2,11 @@
 <html>
 <head>
   <title>Anime Help</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+  <script src="formValidation.js"></script>
 </head>
 <body>
 <div class="help-page">
