--- a/game.html
+++ b/game.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Anime & Characters Quiz</title>
-  <link rel="stylesheet" href="game.css">
+  <link rel="icon" type="image/png" href="assets/akatsuki.png">
+  <link rel="stylesheet" href="gamePage/game.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -11,7 +12,7 @@
 
 <h2>Match the Anime Title with its Main Character</h2>
 
-<div class="container">
+<div class="container" style="display: flex; justify-content: center; align-items: center;">
   <div id="animes" class="column">
     <div class="anime" draggable="true">One Piece</div>
     <div class="anime" draggable="true">Naruto</div>
@@ -53,8 +54,11 @@
   </div>
 </div>
 
-<button id="redirectButton">Go to home page</button>
+<div class="container" style="display: flex; justify-content: center; align-items: center;">
+    <button id="redirectButton" href="index.html" ><a href="index.html" class="feedback-button">Return back</a></button>
+</div>
 
-<script src="game.js"></script>
+
+<script src="gamePage/game.js"></script>
 </body>
 </html>
