--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             </li>
       </ul>
     </nav>
-
     <section style="padding-bottom: 20px">
       <div
         id="carouselExampleCaptions"
@@ -211,18 +210,33 @@
     </section>
 
     <section>
-        <!--Countdown Timer-->
-        <div class="timer">
-          <h1 style="color: goldenrod;">Until freedom:</h1>
-          <div class="timer-controls">
-              <input id="dateTime" type="datetime-local">
-              <button id="start" onclick="startTimer()">Start Timer</button>
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">@</span>
+                <input id="searcherinput" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <div id="suggestions"></div>
+            </div>
           </div>
-          <div id="timer" class="timer"></div>
         </div>
+      </div>
+      <div style="text-align: center;">
+        <button id="searchbtn" class="btn btn-primary" type="button" style="width: 500px;">
+          <i class="fa fa-search" style="float: left; margin-top: 3px;"></i> Search
+        </button>
+      </div>
     </section>
+    <script type="module" src="services/listener_service/searcher.js"></script>
+    <script type="module" src="services/remote_service/atameken_service.js"></script>
 
-
+    
     <section id="mainPart" class="container mt-5">
       <div class="row">
         <div class="col-md-4" style="margin-top: auto; margin-bottom: auto">
@@ -780,6 +794,8 @@
             </div>
           </div>
     </section>
+
+
     <script src="Javascript/RotatingButton.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -809,9 +825,7 @@
     <script src="Javascript/Todolist.js"></script>
     <script src="Javascript/rating_submit.js"></script>
     <script src="Javascript/com_submit.js"></script>
-    <script src="Javascript/popUp.js"></script>
     <script src="https://unpkg.com/tippy.js@6.3.1/dist/tippy.all.min.js"></script>
-    <script src="Javascript/formValidation.js"></script>
     <script src="Javascript/countdown.js"></script>
 
   </body>
