--- a/help.html
+++ b/help.html
@@ -15,6 +15,20 @@
     />
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <style>
+      .chart-container {
+          width: 80%;
+          margin: 20px auto;
+          text-align: center;
+      }
+
+      #website-monitoring-chart {
+          width: 100%;
+          height: 400px;
+      }
+
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <div class="container mt-4">
@@ -101,6 +115,13 @@
             </div>
         </div>
       </div>
+    </section>
+    <section>
+      <div class="chart-container">
+        <canvas id="website-monitoring-chart"></canvas>
+      </div>
+      <script src="graph.js"></script>
+
     </section>
     <script>
         const notificationButton = document.getElementById("notificationButton");
