--- a/game.html
+++ b/game.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-<header>
 
 <h2>Match the Anime Title with its Main Character</h2>
 
@@ -55,7 +54,7 @@
 </div>
 
 <div class="container" style="display: flex; justify-content: center; align-items: center;">
-    <button id="redirectButton" href="index.html" ><a href="index.html" class="feedback-button">Return back</a></button>
+    <a href="index.html" id="redirectButton" class="feedback-button">Return back</a>
 </div>
 
 
