--- a/help.html
+++ b/help.html
@@ -120,7 +120,7 @@
       <div class="chart-container">
         <canvas id="website-monitoring-chart"></canvas>
       </div>
-      <script src="graph.js"></script>
+      <script src="Javascript/graph.js"></script>
 
     </section>
     <script>
