--- a/index.html
+++ b/index.html
@@ -413,7 +413,8 @@
             <div class="row">
                 <div class="col-md-8">
                   <h1 style="color: goldenrod;">Want to try yourself in anime game?</h1>
-                  <button id="animeButton">Play Now</button>
+                  <button id="animeButton">Play drag and drop</button>
+                  <button id="animeButton2">Play Puzzle</button>
                   </div>
                   <div class="col-md-4">
                     <img src="assets/gojo.jpeg" style="width: 150px;">
@@ -422,6 +423,7 @@
               </div>
         </div>
         <script src="Javascript/GamePageButton.js"></script>
+        <script src="Javascript/GamePageButton2.js"></script>
     </section>
 
     <section id="videoPlayerSection" class="container mt-5">
