--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Search for name of any anime</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -412,9 +412,9 @@
           <div class="container mt-4">
             <div class="row">
                 <div class="col-md-8">
-                  <h1 style="color: goldenrod;">Want to try yourself in anime game?</h1>
+                  <h1 style="color: goldenrod;">Want to try yourself in anime games?</h1>
                   <button id="animeButton">Play drag and drop</button>
-                  <button id="animeButton2">Play Puzzle</button>
+                  <button id="animeButton2"><a href="puzzle.html">Play Puzzle</a></button>
                   </div>
                   <div class="col-md-4">
                     <img src="assets/gojo.jpeg" style="width: 150px;">
