--- a/help.html
+++ b/help.html
@@ -67,6 +67,10 @@
         </div>
       </div>
     </div>
+    <section>
+      <button id="scrollBtn" onclick="scrollToTop()">Scroll to Top🚀</button>
+      <script src="Javascript/ScrollTopEach.js"></script>
+    </section>
     <!--Form Validation and Feedback-->
     <section>
       <div class="container mt-4">
