--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <li class="list-group-item">
               <a
                 href="#"
-                onclick="playVideo('assets/backgroundd.webm')"
+                onclick="playVideo('assets/Sukuna.webm')"
                 >Jujustsu Kaisen</a
               >
             </li>
