--- a/game.html
+++ b/game.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-
+<video autoplay muted loop>
+    <source src="assets/JJK.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
 <h2>Match the Anime Title with its Main Character</h2>
 
 <div class="container" style="display: flex; justify-content: center; align-items: center;">
