--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <div class="input-group mb-3">
+              <div class="input-group mb-3" id="search-bar">
                 <span class="input-group-text" id="basic-addon1">@</span>
                 <input id="searcherinput" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
+              </div>              
               <div id="suggestions"></div>
             </div>
           </div>
