--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <div class="input-group mb-3" id="search-bar">
+              <div class="input-group mb-4" id="search-bar">
                 <span class="input-group-text" id="basic-addon1">@</span>
-                <input id="searcherinput" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                <input id="searcherinput" type="text" class="form-control" placeholder="AnimeName" aria-label="Username" aria-describedby="basic-addon1">
               </div>              
               <div id="suggestions"></div>
             </div>
