--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="input-group mb-4" id="search-bar">
+                        <span class="input-group-text" id="basic-addon1">🌈</span>
                         <input id="searcherinput" type="text" class="form-control" placeholder="Anime Name" aria-label="Username" aria-describedby="basic-addon1">
                     </div>
                     <div id="suggestions"></div>
